<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/code_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="3"
            android:text="@string/code_header"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/n_w_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="0.2"
            android:text="@string/n_w_header"
            android:textAppearance="?attr/textAppearanceListItem" />

        <TextView
            android:id="@+id/w_n_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:layout_weight="0.2"
            android:text="@string/w_n_header"
            android:textAppearance="?attr/textAppearanceListItem" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchList"
        android:name="com.jedisebas.tconnect.SearchFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        app:layoutManager="LinearLayoutManager"
        tools:context=".search.SearchFragment"
        tools:listitem="@layout/fragment_search" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/okAfterSelect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>