<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/code_main_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/code_example"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="@dimen/et_min_height"
        android:textColorHint="#8D6E63"
        android:textSize="@dimen/et_bigger_text"
        android:maxLength="13"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/extra_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_extra_search"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/code_main_et"
        app:layout_constraintVertical_bias="0.1" />

    <EditText
        android:id="@+id/four_code_main_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/four_digit_example"
        android:importantForAutofill="no"
        android:inputType="number"
        android:minHeight="@dimen/et_min_height"
        android:textColorHint="#8D6E63"
        android:textSize="@dimen/et_bigger_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/extra_search"
        app:layout_constraintVertical_bias="0.15" />

    <EditText
        android:id="@+id/w_n_main_et"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/w_n_header"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="@dimen/et_min_height"
        android:textColorHint="#8D6E63"
        android:textSize="@dimen/et_bigger_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/four_code_main_et"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:id="@+id/search_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/w_n_main_et"
        app:layout_constraintVertical_bias="0.15" />

</androidx.constraintlayout.widget.ConstraintLayout>